# eloquentlog-cli

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG  Cargo.toml  Makefile  README.md  README.rst  renovate.json
src/: client.rs  config.rs  lib.rs  main.rs  runner.rs
src/command/: get.rs
test/: eloquentlog.toml  run.rs  test.rs
tests/: integration_test.rs
